--- a/common.zh_TW.po
+++ b/common.zh_TW.po
@@ -22,6 +22,7 @@
 # Simon Chow, 2022
 # Simon Chow, 2022
 # 韬 刘 <jiegushijia@gmail.com>, 2019
+# 韬 刘 <jiegushijia@gmail.com>, 2019
 # 黃柏諺 <s8321414@gmail.com>, 2015
 msgid ""
 msgstr ""
@@ -29,7 +30,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2022-12-04 07:22+0100\n"
 "PO-Revision-Date: 2013-09-12 16:53+0000\n"
-"Last-Translator: NaitLee, 2022\n"
+"Last-Translator: 黃柏諺 <s8321414@gmail.com>, 2015\n"
 "Language-Team: Chinese (Taiwan) (http://www.transifex.com/team-xonotic/"
 "xonotic/language/zh_TW/)\n"
 "Language: zh_TW\n"
